📝 docs(auth): added required fields
